chore: bump z3 version
Also upgrades to Ubuntu 26.04 glibc